<resources>
    <string name="app_name">BelcuRafaelStefanApplication</string>
    <string name="economics_a_z_terms">Economics A-Z terms</string>
    <string name="definition">Definition</string>
    <string name="tax">Tax</string>
    <string name="tax_definition">Tax definition</string>
    <string name="delete">DELETE</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="detail">DETAIL</string>
    <string name="save">SAVE</string>
    <string name="todo">TODO</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="parentheses">( )</string>
    <string name="subtract">-</string>
    <string name="plusMinus">+/-</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="backspace"> </string>
    <string name="displaycalculation">Enter a value</string>
    <string name="thu">THU</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="april_2021">January 2022</string>
    <string name="previous"><![CDATA[<-]]></string>
    <string name="next"><![CDATA[->]]></string>
    <string name="type_in_your_email_adress">Type in your Email Adress</string>
    <string name="register_now">Register</string>
    <string name="type_in_your_password">Type in your Password</string>
    <string name="sign_in">Sign in</string>
    <string name="signIn">Sign in</string>
    <string name="your_guide_to_starting_your_own_business">Your guide to starting your own business</string>
    <string name="register">Sign up for an account</string>
    <string name="type_in_your_username">Type in your Username</string>
    <string name="type_in_your_email_adresss">Type in your Email Adress</string>
</resources>