<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backround_calendar"
    tools:context=".Calendar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="400dp"
        android:layout_height="129dp"
        android:layout_marginTop="2dp"
        android:layout_gravity="right"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/calendar_icon"
            android:layout_width="105dp"
            android:layout_height="96dp"
            android:layout_gravity="right"
            android:layout_marginBottom="19dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.96"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/calendar_icon1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_arrow_left_24"
            android:onClick="previousMonth"
            android:textSize="29sp" />

        <TextView
            android:id="@+id/monthandyear"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="3"
            android:background="#D53030"
            android:fontFamily="@font/serif"
            android:text="@string/april_2021"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_arrow_right_24"
            android:onClick="nextMonth"
            android:textSize="29sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#475f8f"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:text="@string/sun"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#475f8f"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:text="MON"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#475f8f"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:text="@string/tue"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#475f8f"
            android:textColor="@color/white"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#475f8f"
            android:textColor="@color/white"
            android:text="@string/thu"
            android:textAlignment="center"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#475f8f"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:text="@string/fri"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#475f8f"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:text="@string/sat"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRV"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="#CBFFFFFF" />
</LinearLayout>
